[UPDATE] Work In Progress

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2><small></small></h2>
+            <h2>Work in progress...</h2>
           </div>
         </div>
         <div class="row">
@@ -235,7 +235,7 @@
             </div>
           </div> -->
         </div>
-      </div>  
+      </div>
     </div>
     <!-- end:service -->
 
@@ -549,7 +549,7 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>
               </a>
             </div>
-            
+
           </div>
         </div>
       </div>
@@ -626,7 +626,7 @@
               <address>
                 <strong></strong>
                 <br>
-                  
+
                 <br>
                 <br>
                 Telp. : +351-123456789<br>
@@ -731,7 +731,7 @@
       </div>
     </div>
     <!-- end:modal-signup -->
-   
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
