--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-top">
-          <!-- <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Property <b class="caret"></b></a>
@@ -67,7 +67,7 @@
             </li>
             <li><a href="#modal-signin" class="signin" data-toggle="modal" data-target="#modal-signin">Sign in</a></li>
             <li><a href="#" class="signup" data-toggle="modal" data-target="#modal-signup">Sign up</a></li>
-          </ul> -->
+          </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
     </nav>
