[UPDATE] New Menu

--- a/index.html
+++ b/index.html
@@ -44,30 +44,12 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-top">
-          <!-- <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Property <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="search.html">Search (Grid View)</a></li>
-                <li><a href="search_list.html">Search (List View)</a></li>
-                <li><a href="category.html">Category (Grid View)</a></li>
-                <li><a href="category_list.html">Category (List View)</a></li>
-                <li><a href="single.html">Single page</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="blog.html">Blog Archive</a></li>
-                <li><a href="blog_single.html">Blog Single</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </li>
+            <li><a href="#">Become a Lander</a></li>
             <li><a href="#modal-signin" class="signin" data-toggle="modal" data-target="#modal-signin">Sign in</a></li>
             <li><a href="#" class="signup" data-toggle="modal" data-target="#modal-signup">Sign up</a></li>
-          </ul> -->
+          </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
     </nav>
@@ -235,7 +217,7 @@
             </div>
           </div> -->
         </div>
-      </div>  
+      </div>
     </div>
     <!-- end:service -->
 
@@ -549,7 +531,7 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>
               </a>
             </div>
-            
+
           </div>
         </div>
       </div>
@@ -626,7 +608,7 @@
               <address>
                 <strong></strong>
                 <br>
-                  
+
                 <br>
                 <br>
                 Telp. : +351-123456789<br>
@@ -731,7 +713,7 @@
       </div>
     </div>
     <!-- end:modal-signup -->
-   
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
