--- a/index.html
+++ b/index.html
@@ -63,51 +63,32 @@
             <div class="quick-search">
               <div class="row">
                 <form role="form">
-                  <!-- <div class="col-md-6 col-sm-6 col-xs-6">
+                  <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
-                      <label for="country">Country</label>
+                      <label for="country">City</label>
                       <select class="form-control">
-                        <option>Australia</option>
-                        <option>Indonesia</option>
-                        <option>Japan</option>
-                        <option>South Korea</option>
-                        <option>China</option>
+                        <option>Lisbon</option>
+                        <option>Porto</option>
+                        <option>Coimbra</option>
+                        <option>Faro</option>
                       </select>
                     </div>
-                    <div class="form-group">
-                      <label for="bedroom">Bedroom</label>
-                      <select class="form-control">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                      </select>
-                    </div>
-                  </div> -->
+                  </div>
                   <!-- break -->
-                  <!-- <div class="col-md-6 col-sm-6 col-xs-6">
+                  <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
-                      <label for="location">Location</label>
+                      <label for="location">Instrument Family</label>
                       <select class="form-control">
-                        <option>Tasmania</option>
-                        <option>Yogyakarta</option>
-                        <option>Tokyo</option>
-                        <option>Busan</option>
-                        <option>Taipe</option>
+                        <option>Brass</option>
+                        <option>Strings</option>
+                        <option>Woodwind</option>
+                        <option>Percussion</option>
+                        <option>Keyboard</option>
                       </select>
                     </div>
-                    <div class="form-group">
-                      <label for="bathroom">Bathroom</label>
-                      <select class="form-control">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                      </select>
-                    </div>
-                  </div> -->
+                  </div>
                   <!-- break -->
-                  <!-- <div class="col-md-6 col-sm-6 col-xs-6">
+                  <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
                       <label for="status">Status</label>
                       <select class="form-control">
@@ -118,13 +99,13 @@
                     <div class="form-group">
                       <label for="minprice">Min Price</label>
                       <select class="form-control">
-                        <option>$4,200</option>
-                        <option>$6,700</option>
+                        <option>< $10.99/day</option>
+                        <option>$</option>
                         <option>$8,150</option>
                         <option>$11,110</option>
                       </select>
                     </div>
-                  </div> -->
+                  </div>
                   <!-- break -->
                   <!-- <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
