--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <form role="form">
                   <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
-                      <label for="country">City</label>
+                      <label for="location">City</label>
                       <select class="form-control">
                         <option>Lisbon</option>
                         <option>Porto</option>
@@ -77,7 +77,7 @@
                   <!-- break -->
                   <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
-                      <label for="location">Instrument Family</label>
+                      <label for="instrument">Instrument Family</label>
                       <select class="form-control">
                         <option>Brass</option>
                         <option>Strings</option>
@@ -96,36 +96,19 @@
                         <option>For Rent</option>
                       </select>
                     </div>
+                  </div>
+                  <!-- break -->
+                  <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="form-group">
                       <label for="minprice">Min Price</label>
                       <select class="form-control">
                         <option>< $10.99/day</option>
-                        <option>$</option>
-                        <option>$8,150</option>
-                        <option>$11,110</option>
+                        <option>$11/day - $30.99/day</option>
+                        <option>$31/day - $50.99/day</option>
+                        <option>> $51</option>
                       </select>
                     </div>
                   </div>
-                  <!-- break -->
-                  <!-- <div class="col-md-6 col-sm-6 col-xs-6">
-                    <div class="form-group">
-                      <label for="type">Type</label>
-                      <select class="form-control">
-                        <option>Villa</option>
-                        <option>Recident</option>
-                        <option>Commercial</option>
-                      </select>
-                    </div>
-                    <div class="form-group">
-                      <label for="maxprice">Max Price</label>
-                      <select class="form-control">
-                        <option>$8,200</option>
-                        <option>$11,700</option>
-                        <option>$14,150</option>
-                        <option>$21,110</option>
-                      </select>
-                    </div>
-                  </div> -->
                   <div class="col-md-12 col-sm-12"><input type="submit" name="submit" value="Search" class="btn btn-primary btn-lg btn-block"></div>
 
                 </form>
@@ -146,7 +129,7 @@
           </div>
         </div>
         <div class="row">
-          <!-- <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-container">
               <div class="service-icon">
                 <a href="#"><i class="fa fa-home"></i></a>
@@ -157,9 +140,9 @@
                 tempor incididunt.</p>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- break -->
-          <!-- <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-container">
               <div class="service-icon">
                 <a href="#"><i class="fa fa-thumbs-up"></i></a>
@@ -170,9 +153,9 @@
                 tempor incididunt.</p>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- break -->
-          <!-- <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-container">
               <div class="service-icon">
                 <a href="#"><i class="fa fa-umbrella"></i></a>
@@ -183,9 +166,9 @@
                 tempor incididunt.</p>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- break -->
-          <!-- <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-container">
               <div class="service-icon">
                 <a href="#"><i class="fa fa-lock"></i></a>
@@ -196,7 +179,7 @@
                 tempor incididunt.</p>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
