--- a/index.html
+++ b/index.html
@@ -132,12 +132,11 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-container">
               <div class="service-icon">
-                <a href="#"><i class="fa fa-home"></i></a>
+                <a href="#"><i class="fa fa-music"></i></a>
               </div>
               <div class="service-content">
-                <h3>Lorem ipsum dolor sit</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt.</p>
+                <h3>Instruments</h3>
+                <p>We have all main instruments.</p>
               </div>
             </div>
           </div>
@@ -174,9 +173,8 @@
                 <a href="#"><i class="fa fa-lock"></i></a>
               </div>
               <div class="service-content">
-                <h3>Lorem ipsum dolor sit</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt.</p>
+                <h3>Safe</h3>
+                <p>Exchange it safly.</p>
               </div>
             </div>
           </div>
@@ -189,10 +187,10 @@
     <div id="content">
       <div class="container">
         <!-- begin:latest -->
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-md-12">
             <div class="heading-title">
-              <h2>Latest Real Estate</h2>
+              <h2>Latest Instruments</h2>
             </div>
           </div>
         </div>
@@ -202,95 +200,95 @@
               <div class="property-image">
                 <img src="img/img02.jpg" alt="arillo real estate theme">
                 <div class="property-price">
-                  <h4>Residential</h4>
-                  <span>$800,000</span>
+                  <h4>Strings</h4>
+                  <span>$55<small>/day</small></span>
                 </div>
                 <div class="property-status">
-                  <span>For Sale</span>
+                  <span>For Rent</span>
                 </div>
               </div>
               <div class="property-features">
-                <span><i class="fa fa-home"></i> 5,000 m<sup>2</sup></span>
-                <span><i class="fa fa-hdd-o"></i> 2 Bed</span>
-                <span><i class="fa fa-male"></i> 2 Bath</span>
+                <span><i class="fa fa-calendar-o"></i> Now</span>
+                <span><i class="fa fa-truck"></i> No</span>
+                <span><i class="fa fa-clock-o"></i> 1 Year</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">The Urban Life</a> <small>22, JJ Road, Yogyakarta</small></h3>
+                <h3><a href="#">Electric Guitar</a> <small>Lisbon</small></h3>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- break -->
 
-          <!-- <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="property-container">
               <div class="property-image">
                 <img src="img/img03.jpg" alt="arillo real estate theme">
                 <div class="property-price">
-                  <h4>Villa</h4>
-                  <span>$300,000<small>/year</small></span>
+                  <h4>Percussion</h4>
+                  <span>$7<small>/day</small></span>
                 </div>
                 <div class="property-status">
                   <span>For Rent</span>
                 </div>
               </div>
               <div class="property-features">
-                <span><i class="fa fa-home"></i> 5,000 m<sup>2</sup></span>
-                <span><i class="fa fa-hdd-o"></i> 2 Bed</span>
-                <span><i class="fa fa-male"></i> 2 Bath</span>
+                <span><i class="fa fa-calendar-o"></i> Now</span>
+                <span><i class="fa fa-truck"></i> Yes</span>
+                <span><i class="fa fa-clock-o"></i> 2 Years</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">The Urban Life</a> <small>22, JJ Road, Yogyakarta</small></h3>
+                <h3><a href="#">Drum</a> <small>Porto</small></h3>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- break -->
 
-          <!-- <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="property-container">
               <div class="property-image">
                 <img src="img/img04.jpg" alt="arillo real estate theme">
                 <div class="property-price">
-                  <h4>Commercial</h4>
-                  <span>$800,000</span>
-                </div>
-                <div class="property-status">
-                  <span>For Sale</span>
-                </div>
-              </div>
-              <div class="property-features">
-                <span><i class="fa fa-home"></i> 5,000 m<sup>2</sup></span>
-                <span><i class="fa fa-hdd-o"></i> 2 Bed</span>
-                <span><i class="fa fa-male"></i> 2 Bath</span>
-              </div>
-              <div class="property-content">
-                <h3><a href="#">The Urban Life</a> <small>22, JJ Road, Yogyakarta</small></h3>
-              </div>
-            </div>
-          </div> -->
-          <!-- break -->
-
-          <!-- <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="property-container">
-              <div class="property-image">
-                <img src="img/img05.jpg" alt="arillo real estate theme">
-                <div class="property-price">
-                  <h4>Residential</h4>
-                  <span>$800,000<small>/year</small></span>
+                  <h4>Keyboard</h4>
+                  <span>$200<small>/day</small></span>
                 </div>
                 <div class="property-status">
                   <span>For Rent</span>
                 </div>
               </div>
               <div class="property-features">
-                <span><i class="fa fa-home"></i> 5,000 m<sup>2</sup></span>
-                <span><i class="fa fa-hdd-o"></i> 2 Bed</span>
-                <span><i class="fa fa-male"></i> 2 Bath</span>
+                <span><i class="fa fa-calendar-o"></i> in 5 days</span>
+                <span><i class="fa fa-truck"></i> Yes</span>
+                <span><i class="fa fa-clock-o"></i> 5 Months</span>
               </div>
               <div class="property-content">
-                <h3><a href="#">The Urban Life</a> <small>22, JJ Road, Yogyakarta</small></h3>
+                <h3><a href="#">YAMAHA Piano</a> <small>Lisbon</small></h3>
               </div>
             </div>
-          </div> -->
+          </div>
+          <!-- break -->
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="property-container">
+              <div class="property-image">
+                <img src="img/img05.jpg" alt="arillo real estate theme">
+                <div class="property-price">
+                  <h4>Strings</h4>
+                  <span>$150<small>/day</small></span>
+                </div>
+                <div class="property-status">
+                  <span>For Rent</span>
+                </div>
+              </div>
+              <div class="property-features">
+                <span><i class="fa fa-calendar-o"></i> in 2 days</span>
+                <span><i class="fa fa-truck"></i> No</span>
+                <span><i class="fa fa-clock-o"></i> 1 Year</span>
+              </div>
+              <div class="property-content">
+                <h3><a href="#">Classic Violin</a> <small>Coimbra</small></h3>
+              </div>
+            </div>
+          </div>
           <!-- break -->
         </div>
         <!-- end:latest -->
@@ -529,13 +527,12 @@
           <!-- break -->
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="widget">
-              <h3>Features</h3>
+              <h3>Terms</h3>
               <ul class="list-unstyled">
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">How To</a></li>
-                <li><a href="#">Market Trend</a></li>
-                <li><a href="#">Android App</a></li>
-                <li><a href="#">IOS App</a></li>
+                <li><a href="#">Renter Terms</a></li>
+                <li><a href="#">Owner Terms</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms of Use</a></li>
               </ul>
             </div>
           </div>
@@ -555,13 +552,13 @@
           <!-- break -->
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="widget">
-              <h3>Features</h3>
+              <h3>oppr</h3>
               <ul class="list-unstyled">
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">How To</a></li>
-                <li><a href="#">Market Trend</a></li>
-                <li><a href="#">Android App</a></li>
-                <li><a href="#">IOS App</a></li>
+                <li><a href="http://oppr.io/">Group</a></li>
+                <li><a href="http://dev.oppr.io/#team">Dev Team</a></li>
+                <li><a href="http://dev.oppr.io/#portfolio">Projects</a></li>
+                <li><a href="http://dev.oppr.io/#services">Hire Us</a></li>
+                <li><a href="http://dev.oppr.io/#contact">Contacts</a></li>
               </ul>
             </div>
           </div>
@@ -570,9 +567,9 @@
             <div class="widget">
               <h2>RentString</h2>
               <address>
-                <strong></strong>
+                <strong>IST</strong>
                 <br>
-
+                  Avenida Rovisco Pais 1
                 <br>
                 <br>
                 Telp. : +351-123456789<br>
