[UPDATE] New Search Page

--- a/index.html
+++ b/index.html
@@ -633,7 +633,9 @@
           </div>
           <div class="modal-footer">
             <p>Don't have account ? <a href="#modal-signup"  data-toggle="modal" data-target="#modal-signup">Sign up here.</a></p>
-            <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign in">
+            <a href="index-signedup.html">
+              <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign in">
+            <a href="index-signedup.html">
           </div>
         </div>
       </div>
@@ -668,7 +670,9 @@
           </div>
           <div class="modal-footer">
             <p>Already have account ? <a href="#modal-signin" data-toggle="modal" data-target="#modal-signin">Sign in here.</a></p>
-            <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign up">
+            <a href="index-signedup.html">
+              <input type="submit" class="btn btn-primary btn-block btn-lg" value="Sign up">
+            </a>
           </div>
         </div>
       </div>
